# lab06

./: CMakeLists.txt  CPack.cmake  DESCRIPTION  README.md
.github/workflows/: CI.yml  CI_release.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_build/formatter_ex_lib_dir/: Makefile  cmake_install.cmake
_build/formatter_ex_lib_dir/formatter_lib_dir/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: solver.cpp
